# menhir-lsp

./: .gitignore  .ocamlinit  NOTES.md  README.md  dune-project  justfile  menhir-lsp.opam
client/: README.md  justfile  package-lock.json  package.json
client/src/: extension.ts
lib/: Driver.ml  IL.ml  ILPrinter.ml  ILPrinter.mli  MList.ml  MList.mli  NewRuleSyntax.ml  Parser.mly  dune  keyword.ml
ocamllex/: dune  main.ml
parser/: Action.ml  FrontTypes.ml  ILConstruction.ml  InputFile.ml  Lexer.mll  NewRuleSyntax.ml  Parser.mly  ParserAux.ml  ParserAux.mli  Range.mli  Syntax.ml  dune  keyword.mli
test/: calc-new-syntax.mly  calc.mly  dune
